# BEWorld

./: CHANGELOG  LICENSE  README  beworld.tcl  buildme.sh
bindings/tcl/: CMakeLists.txt  README.brick-tcl
bindings/tcl/doc/: API_Reference.txt
bindings/tcl/doc/xml/: API_Reference.xml  xmlchew.tcl
bindings/tcl/extra/: Findbrick.cmake  mkpkg.tcl
bindings/tcl/src/: CMakeLists.txt  main.c  main.h  tcl-common.c  tcl-common.h  tcl-mod.c  tcl-mod.h
engine/: CMakeLists.txt  README.brick-engine  license-engine.txt
engine/doc/: API_Reference.txt  Programmers_Guide.texi
engine/extra/: CMakeLists.txt  brick.pc.cmake
engine/include/: CMakeLists.txt  brick.h.cmake  config.h.cmake  libdivide.h
engine/src/: CMakeLists.txt  audio.c  audio.h  clock.c  clock.h  collision.c  collision.h  common.h  defines.h  event.c  event.h  font.c  font.h  frame.c  frame.h  graphics.c  graphics.h  init.c  init.h  inspect.c  inspect.h  io.c  io.h  layers.c  layers.h  list.c  list.h  map.c  map.h  misc.c  misc.h  motion.c  motion.h  pixel-be.c  pixel-be.h  pixel-common.h  pixel-le.c  pixel-le.h  pixel.c  pixel.h  (+10 more)
misc/: brick-01-beworld.txt  bxdiv2data.c  data2bxdiv.c  lzbetool
